# snapshotter-lite-multi-setup

./: .gitignore  .pre-commit-config.yaml  ANNOUNCEMENT.md  CHANGELOG.md  CLI_DOCUMENTATION.md  LICENSE  MIGRATION_TO_UV.md  MintContract.json  MintContractBase.json  PYPI_README.md  PowerloomNodes.json  ProtocolState.json  README.md  README_PRECOMMIT.md  bootstrap.sh  build_binary.py  deploy-all.sh  diagnose.sh  env.example  env.example.devnet  init.sh  init_devnet.sh  install-uv.sh  install.sh  multi_clone.py  multi_data_market_announcement_single_node.md   multi_wrapper.py  prep.sh  pyinstaller.spec  pyproject.toml  requirements.txt  setup-uv.sh  setup.sh  test_wallet_input.py
.githooks/: pre-commit
.github/workflows/: build-binaries.yml  build-cli-binaries.yml  publish-pypi.yml
scripts/: embed_version.py  lint.sh
snapshotter_cli/: __init__.py  __main__.py  cli.py
snapshotter_cli/commands/: configure.py  diagnose.py  identity.py  shell.py
snapshotter_cli/utils/: changelog.py  config_helpers.py  console.py  deployment.py  docker_utils.py  evm.py  models.py  settings_models.py  system_checks.py
snapshotter_cli/utils/abi/: PowerloomNodes.json  ProtocolState.json
tests/: __init__.py  test_cli.py
