[tool.poetry]
name = "powerloom-snapshotter-cli"
version = "0.1.0"
description = "Powerloom Snapshotter Node Management CLI"
authors = ["Powerloom Protocol"]
readme = "README.md"
packages = [
    { include = "snapshotter_cli" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
# https://github.com/fastapi/typer/pull/1225
# https://github.com/ai-dynamo/dynamo/issues/1039
typer = {extras = ["all"], version = "0.15.4"}
rich = "^13.7.0"
web3 = "^6.15.1"
python-dotenv = "^1.0.1"
psutil = "^5.9.8"
pydantic = "^2.10.4"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
isort = "^5.13.2"
pytest = "^8.0.0"
mypy = "^1.8.0"
pyinstaller = "^6.14.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
powerloom-snapshotter-cli = "snapshotter_cli.cli:app"
powerloom = "snapshotter_cli.cli:app"
snapshotter = "snapshotter_cli.cli:app"