[project]
name = "powerloom-snapshotter-cli"
version = "0.1.0"
description = "CLI tool for deploying and managing Powerloom Snapshotter nodes"
authors = [{name = "Powerloom Protocol", email = "hello@powerloom.io"}]
readme = "PYPI_README.md"
license = {text = "MIT"}
homepage = "https://powerloom.io"
repository = "https://github.com/powerloom/snapshotter-lite-multi-setup"
documentation = "https://github.com/powerloom/snapshotter-lite-multi-setup/blob/master/CLI_DOCUMENTATION.md"
keywords = ["powerloom", "snapshotter", "blockchain", "cli", "node-management", "web3", "ethereum"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
requires-python = ">=3.12,<3.14"
dependencies = [
    # https://github.com/fastapi/typer/pull/1225
    # https://github.com/ai-dynamo/dynamo/issues/1039
    "typer[all]==0.15.4",
    "rich>=13.7.0",
    "web3>=6.15.1",
    "python-dotenv>=1.0.1",
    "psutil>=5.9.8",
    "pydantic>=2.10.4",
]

[project.urls]
"Bug Tracker" = "https://github.com/powerloom/snapshotter-lite-multi-setup/issues"
"Changelog" = "https://github.com/powerloom/snapshotter-lite-multi-setup/releases"
"Twitter" = "https://x.com/powerloom"

[project.scripts]
powerloom-snapshotter-cli = "snapshotter_cli.cli:app"
snapshotter = "snapshotter_cli.cli:app"

[tool.uv]
dev-dependencies = [
    "black>=24.2.0",
    "isort>=5.13.2",
    "pytest>=8.0.0",
    "mypy>=1.8.0",
    "pyinstaller>=6.14.2",
    "pre-commit>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["snapshotter_cli"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88
